--- a/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Controls/BusyIndicatorControl.xaml
+++ b/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Controls/BusyIndicatorControl.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="XCS.BV.VM.BlackBee.Controls.BusyIndicatorControl"
+    x:Class="BlackBee.Toolkit.Controls.BusyIndicatorControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="clr-namespace:XCS.BV.VM.BlackBee.Controls"
+    xmlns:controls="clr-namespace:BlackBee.Toolkit.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     Loaded="BusyIndicatorControl_OnLoaded"
