--- a/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Controls/BusyIndicatorControl.xaml
+++ b/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Controls/BusyIndicatorControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<UserControl x:Name="userControl"
     x:Class="BlackBee.Toolkit.Controls.BusyIndicatorControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -22,7 +22,7 @@
             </LinearGradientBrush>
         </Grid.Background>
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" >
-            <ProgressBar  IsIndeterminate="True" Width="200"/>
+            <ProgressBar x:Name="progressBar" Width="200" Height="20" Maximum="100" Value="{Binding Value, ElementName=userControl, IsAsync=True, Mode=TwoWay}" />
             <TextBlock x:Name="MessageText" VerticalAlignment="Center" Text="{Binding Message, ElementName=userControl, FallbackValue=Выполнение операции\, пожалуйста подождите ...}" HorizontalAlignment="Center"  Foreground="White"/>
         </StackPanel>
 
